src/app/posts/components/Toc.module.css
.toc {
  --max-height: 60vh;
  height: 100%;
  color: var(--text-2);
  overflow-x: hidden;
  overflow-y: auto;
  position: sticky;
  right: 0;
  top: 145px;
  z-index: 9;
  padding-left: 48px;
  padding-right: 16px;
  max-height: calc(var(--max-height) - 140px);
  width: var(--center-rest);
  scrollbar-width: none;
  &::-webkit-scrollbar {
    width: 0;
  }
}

@media screen and (max-width: 1024px) {
  .toc {
    padding-left: 32px;
  }
}

@media screen and (max-width: 960px) {
  .toc {
    display: none;
  }
}

.item {
  display: block;
  font-size: 14px;
  max-width: 300px;
  height: 32px;
  line-height: 32px;
  transition: color 150ms;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.item:hover {
  color: var(--text);
}

.active {
  color: var(--text);
}

.title {
  position: sticky;
  top: 0;
  left: 16px;
  padding-bottom: 8px;
  background-color: var(--bg-body);
  font-size: 18px;
  font-weight: 700;
  color: var(--text);
}

.curtain {
  position: fixed;
  bottom: calc(100vh - var(--max-height));
  right: 0;
  height: 48px;
  width: var(--center-rest);
  z-index: 8;
  background: linear-gradient(transparent, var(--bg-body) 60%);
  transition: all 0.3s;
}

